--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.0.0",
     "@react-navigation/native": "^6.1.17",
     "@tamagui/config": "^1.122.7",
     "@tamagui/lucide-icons": "^1.122.7",
@@ -35,13 +36,15 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.75.2",
     "react-native-reanimated": "~3.15.1",
     "react-native-safe-area-context": "4.10.9",
     "react-native-screens": "~3.34.0",
     "react-native-svg": "15.6.0",
     "react-native-web": "^0.19.0",
-    "tamagui": "^1.122.7"
+    "tamagui": "^1.122.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
